# docker-manager

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
static/: main.js
templates/: index.html
