[tool.poetry]
name = "docker-manager"
version = "0.1.0"
description = ""
authors = ["nathan.lusa"]
readme = "README.md"
packages = [{include = "docker_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
docker = "^6.0.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
